--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       <li>
         <strong>Ödev 2:</strong> <a href="odevler/odev2.c" target="_blank">Görüntüle</a> | <a href="odevler/odev2.c" download>İndir</a>
       </li>
+      <li>
+        <strong>Ödev 3:</strong> <a href="odevler/odev3.c" target="_blank">Görüntüle</a> | <a href="odevler/odev3.c" download>İndir</a>
+      </li>
       <!-- Yeni ödevleri buraya ekleyebilirsin -->
     </ul>
   </section>
@@ -42,9 +45,9 @@
     <h2>İletişim</h2>
     <p>Bana aşağıdaki sosyal medya hesaplarımdan ulaşabilirsiniz:</p>
     <ul>
-      <li><a href="https://github.com/kullaniciadiniz" target="_blank">GitHub</a></li>
-      <li><a href="https://www.linkedin.com/in/kullaniciadiniz" target="_blank">LinkedIn</a></li>
-      <li><a href="mailto:mail@ornek.com">mail@ornek.com</a></li>
+      <li><a href="https://github.com/altunmanx" target="_blank">GitHub</a></li>
+      <li><a href="https://www.linkedin.com/in/s%C3%BCleyman-altun-74a98726b/" target="_blank">LinkedIn</a></li>
+      <li><a href="suleymanaltun@hacettepe.edu.tr">mail@ornek.com</a></li>
     </ul>
   </section>
 
