--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <ul>
       <li><a href="https://github.com/altunmanx" target="_blank">GitHub</a></li>
       <li><a href="https://www.linkedin.com/in/s%C3%BCleyman-altun-74a98726b/" target="_blank">LinkedIn</a></li>
-      <li><a href="suleymanaltun@hacettepe.edu.tr">mail@ornek.com</a></li>
+      <li><a href="mailto:suleymanaltun@hacettepe.edu.tr">suleymanaltun@hacettepe.edu.tr</a></li>
     </ul>
   </section>
 
