--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <section id="hakkimda">
     <h2>Hakkımda</h2>
     <p>Ben bir Elektrik-Elektronik Mühendisliği öğrencisiyim. Bu siteyi, C dili ödevlerimi paylaşmak ve gelişimimi belgelemek amacıyla oluşturdum.</p>
+    <p><em>“Gökyüzü sınır değil; sadece başlangıç noktası.”</em></p>
   </section>
 
   <section id="projeler">
