--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
     <h2>Projeler / C Ödevleri</h2>
     <ul>
       <li>
-        <strong>Ödev 1:</strong> <a href="odevler/odev1.c" target="_blank">Görüntüle</a> | <a href="odevler/odev1.c" download>İndir</a>
+        <strong>Hw1-Q1:</strong> <a href="odevler/Hw1-Q1.c" target="_blank">Görüntüle</a> | <a href="odevler/Hw1-Q1.c" download>İndir</a>
       </li>
       <li>
-        <strong>Ödev 2:</strong> <a href="odevler/odev2.c" target="_blank">Görüntüle</a> | <a href="odevler/odev2.c" download>İndir</a>
+        <strong>Hw1-Q2:</strong> <a href="odevler/Hw1-Q2.c" target="_blank">Görüntüle</a> | <a href="odevler/Hw1-Q2.c" download>İndir</a>
       </li>
       <li>
-        <strong>Ödev 3:</strong> <a href="odevler/odev3.c" target="_blank">Görüntüle</a> | <a href="odevler/odev3.c" download>İndir</a>
+        <strong>Hw1-Q3:</strong> <a href="odevler/Hw1-Q3.c" target="_blank">Görüntüle</a> | <a href="odevler/Hw1-Q3.c" download>İndir</a>
       </li>
-      <!-- Yeni ödevleri buraya ekleyebilirsin -->
+      <!-- Yeni ödevleri bu formatta ekleyebilirsin -->
     </ul>
   </section>
 
@@ -47,7 +47,7 @@
     <p>Bana aşağıdaki sosyal medya hesaplarımdan ulaşabilirsiniz:</p>
     <ul>
       <li><a href="https://github.com/altunmanx" target="_blank">GitHub</a></li>
-      <li><a href="https://www.linkedin.com/in/s%C3%BCleyman-altun-74a98726b/" target="_blank">LinkedIn</a></li>
+      <li><a href="https://www.linkedin.com/in/s%C3%BCleyman-altun-7a498726b/" target="_blank">LinkedIn</a></li>
       <li><a href="mailto:suleymanaltun@hacettepe.edu.tr">suleymanaltun@hacettepe.edu.tr</a></li>
     </ul>
   </section>
